# OOP-Lab6

./: .gitignore  CMakeLists.txt  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: bandit.h  battle_visitor.h  elf.h  factory.h  knight.h  npc.h  observer.h
src/: bandit.cpp  battle_visitor.cpp  elf.cpp  factory.cpp  fight.cpp  knight.cpp  npc.cpp
tests/: lab6_test.cpp
